// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppBar element produces output with children 1`] = `
<header
  className="MuiPaper-root MuiPaper-elevation MuiPaper-elevation4 MuiAppBar-root MuiAppBar-colorPrimary MuiAppBar-positionStatic css-hip9hq-MuiPaper-root-MuiAppBar-root"
  id="app.bar1"
>
  <div
    className="MuiToolbar-root MuiToolbar-gutters MuiToolbar-dense css-10ltm04-MuiToolbar-root"
  >
    <div
      className="MuiStack-root css-jp2etx-MuiStack-root"
    >
      <p
        className="MuiTypography-root MuiTypography-body1 css-vybajm-MuiTypography-root"
        id="app.bar1.text1"
      >
        First text
      </p>
      <p
        className="MuiTypography-root MuiTypography-body1 css-vybajm-MuiTypography-root"
        id="app.bar1.text2"
      >
        Second text
      </p>
    </div>
  </div>
</header>
`;

exports[`AppBar element produces output with children and title 1`] = `
<header
  className="MuiPaper-root MuiPaper-elevation MuiPaper-elevation4 MuiAppBar-root MuiAppBar-colorPrimary MuiAppBar-positionStatic css-gxjovy-MuiPaper-root-MuiAppBar-root"
  id="app.bar1"
>
  <div
    className="MuiToolbar-root MuiToolbar-gutters MuiToolbar-dense css-10ltm04-MuiToolbar-root"
  >
    <div
      className="MuiStack-root css-jp2etx-MuiStack-root"
    >
      <div
        className="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
      >
        My App
      </div>
      <p
        className="MuiTypography-root MuiTypography-body1 css-vybajm-MuiTypography-root"
        id="app.bar1.text1"
      >
        First text
      </p>
      <p
        className="MuiTypography-root MuiTypography-body1 css-vybajm-MuiTypography-root"
        id="app.bar1.text2"
      >
        Second text
      </p>
    </div>
  </div>
</header>
`;

exports[`AppBar element produces output with title 1`] = `
<header
  className="MuiPaper-root MuiPaper-elevation MuiPaper-elevation4 MuiAppBar-root MuiAppBar-colorPrimary MuiAppBar-positionStatic css-gxjovy-MuiPaper-root-MuiAppBar-root"
  id="app.bar1"
>
  <div
    className="MuiToolbar-root MuiToolbar-gutters MuiToolbar-dense css-10ltm04-MuiToolbar-root"
  >
    <div
      className="MuiStack-root css-jp2etx-MuiStack-root"
    >
      <div
        className="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
      >
        My App
      </div>
    </div>
  </div>
</header>
`;
